--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,13 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs access to your network to detect internet connectivity and provide a better user experience.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs access to your network to detect internet connectivity and provide a better user experience.</string>
+    <key>NSLocalNetworkUsageDescription</key>
+    <string>This app needs access to your network to detect internet connectivity and provide a better user experience.</string>
+
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
