--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   http: ^1.2.0
   provider: ^6.0.0
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
