Tax data modal UI fixed, Tax ID input added, user data and user tax data services added

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,7 +28,8 @@
     <string>This app needs access to your network to detect internet connectivity and provide a better user experience.</string>
     <key>NSLocalNetworkUsageDescription</key>
     <string>This app needs access to your network to detect internet connectivity and provide a better user experience.</string>
-
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
